# gs-dso

./: CMakeLists.txt  README.md
DSO/: CMakeLists.txt
DSO/include/FullSystem/: FullSystem.h
DSO/include/util/: DatasetReader.h
DSO/src/: main_dso_pangolin_with_gs.cpp
DSO/src/FullSystem/: CoarseInitializer.cpp  FullSystem.cpp  HessianBlocks.cpp  Residuals.cpp
DSO/src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
DSO/src/util/: Undistort.cpp
GSModule/: CMakeLists.txt  opensplat.cpp
GSModule/include/GSModule/: cv_utils.hpp  gsmap.hpp  input_data.hpp  model.hpp  rasterize_gaussians.hpp  utils.hpp
GSModule/rasterizer/gsplat/: bindings.cu  bindings.h  forward.cu  forward.cuh  helpers.cuh
GSModule/rasterizer/gsplat-cpu/: gsplat_cpu.cpp
GSModule/src/: colmap.cpp  cv_utils.cpp  gsmap.cpp  input_data.cpp  model.cpp  nerfstudio.cpp  point_io.cpp  project_gaussians.cpp  rasterize_gaussians.cpp  tensor_math.cpp
calib/EuRoc/: calib.txt
calib/ICL/: calib.txt
calib/ICL-Augm/: calib.txt
calib/TUM1/: calib.txt
tests/: CMakeLists.txt  gs_for_dso.cpp  simple_trainer.cpp
